Fixing the fixed footer and the unaligned

--- a/src/client/styles/profile-view.scss
+++ b/src/client/styles/profile-view.scss
@@ -53,6 +53,7 @@
                 @extend .flex-row;
                 align-items: center;
                 justify-items: center;
+                justify-content: center;
                 flex-wrap: wrap;
                 padding: 0 $gutter-lg;
 
